finish logout and refactoring profile
